--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <section class="about">
                 <div class="photo">
-                    <img src="image/profil.jpg" width="200" height="200" style="border-radius: 50%;" alt="my-profil">
+                    <img src="profil.jpg" width="200" height="200" style="border-radius: 50%;" alt="my-profil">
                     <h4>SATRIANA</h4>
                     <h5>E1D123028</h5>
                 </div>
